[gd_scene load_steps=6 format=3 uid="uid://dusm8b0ffiiu4"]

[ext_resource type="FontFile" uid="uid://1mina24aowrb" path="res://fonts/DungeonFont.ttf" id="1_3qqhc"]
[ext_resource type="Script" path="res://scenes/ui/number_picker.gd" id="1_cpup8"]
[ext_resource type="FontFile" uid="uid://bsmb72ttf3jlo" path="res://fonts/Bitfantasy.ttf" id="3_2xew1"]
[ext_resource type="Texture2D" uid="uid://0s8mr2igi2ga" path="res://sprites/misc/arrow_icon.png" id="3_u62dq"]

[sub_resource type="LabelSettings" id="LabelSettings_2dyhg"]
font = ExtResource("3_2xew1")
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.611765)

[node name="NumberPicker" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -56.0
offset_right = 20.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 3
alignment = 1
script = ExtResource("1_cpup8")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonUp" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_3qqhc")
theme_override_font_sizes/font_size = 20

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 0
offset_left = 1.0
offset_right = 31.0
offset_bottom = 30.0
mouse_filter = 2
texture = ExtResource("3_u62dq")
expand_mode = 1
stretch_mode = 3

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 2
label_settings = SubResource("LabelSettings_2dyhg")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonDown" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_3qqhc")
theme_override_font_sizes/font_size = 20

[node name="TextureRect2" type="TextureRect" parent="Control2"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_u62dq")
expand_mode = 1
stretch_mode = 3
flip_v = true

[connection signal="pressed" from="Control/ButtonUp" to="." method="on_button_up_pressed"]
[connection signal="pressed" from="Control2/ButtonDown" to="." method="on_button_down_pressed"]
